<resources>
    <string name="about_app_description">Description:</string>
    <string name="about_app_license">License:</string>
    <string name="about_app_version">Version:</string>
    <string name="about_app_website">Website:</string>
    <string name="address_management">Address Management</string>
    <string name="address_management_help_text">Select one or more IP addresses that will be included in the QR code you can will share. These addresses will be used by others to reach you. Be aware that the IP address change depending on the network. Enable your WLAN if no IP address is visible.</string>
    <string name="app_description">Allow voice and video communication without any server or Internet access. Simply scan each others contact QR code and call each other. This works on most networks, e.g. at home, in community networks or at work.</string>
    <string name="app_license" translatable="false">GPL-3.0-or-later</string>
    <string name="app_name" translatable="false">Meshenger</string>
    <string name="app_website" translatable="false">https://github.com/meshenger-app</string>
    <string name="ask_for_bluetooth_connect_permission">Give permission to use a Bluetooth headset now or wait until you use it.</string>
    <string name="ask_for_camera_permission">Give permission to use the camera now or wait until you use it.</string>
    <string name="ask_for_draw_overlay_permission">Missing permission to draw on top. Needed to bring incoming calls to the foreground.</string>
    <string name="ask_for_post_notification_permission">Missing permission to post notifications. This is needed to listen for calls in the background.</string>
    <string name="ask_for_record_audio_permission">Give permission to use the microphone now or wait until you use it.</string>
    <string name="audio_device_auto">%1$s (auto)</string>
    <string name="audio_device_bluetooth">Bluetooth</string>
    <string name="audio_device_earpiece">Earpiece</string>
    <string name="audio_device_fixed">%1$s (fixed)</string>
    <string name="audio_device_speakerphone">Speakerphone</string>
    <string name="audio_device_wired_headset">Wired Headset</string>
    <string name="button_abort">Abort</string>
    <string name="button_add">Add</string>
    <string name="button_ask">Ask</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_export">Export</string>
    <string name="button_import">Import</string>
    <string name="button_next">Next</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_rename">Rename</string>
    <string name="button_replace">Replace</string>
    <string name="button_reset">Reset</string>
    <string name="button_save">Save</string>
    <string name="button_skip">Skip</string>
    <string name="button_yes">Yes</string>
    <string name="call_authentication_failed">Authentication Failed</string>
    <string name="call_connected">Connected</string>
    <string name="call_connecting">Calling…</string>
    <string name="call_connection_failed">Connection Failed</string>
    <string name="call_denied">Declined</string>
    <string name="call_ended">Call Ended</string>
    <string name="call_error">Error</string>
    <string name="call_error_no_address">Error: No address</string>
    <string name="call_error_not_listening">Error: No app running</string>
    <string name="call_error_unresolved_hostname">Error: Cannot resolve address</string>
    <string name="call_no_network">No network - enable Wi-Fi\?</string>
    <string name="call_ringing">Ringing…</string>
    <string name="call_start_or_abort">Start or Abort Call</string>
    <string name="call_waiting">Waiting…</string>
    <string name="camera_back">Back</string>
    <string name="camera_front">Front</string>
    <string name="capture_format_change_text">Slide to change capture format</string>
    <string name="clear_events">Clear Events</string>
    <string name="connected_to_address">(to %1$s)</string>
    <string name="connecting_to_address">Connecting to %1$s</string>
    <string name="contact_address_input">Address</string>
    <string name="contact_address_list">Addresses</string>
    <string name="contact_blocked">Blocked</string>
    <string name="contact_has_no_address_warning">Warning: Contact has no address</string>
    <string name="contact_key_conflict">A contact with the same key exists:</string>
    <string name="contact_menu_add">Add</string>
    <string name="contact_menu_block">Block</string>
    <string name="contact_menu_delete">Delete</string>
    <string name="contact_menu_details">Details</string>
    <string name="contact_menu_ping">Ping</string>
    <string name="contact_menu_qrcode">QR code</string>
    <string name="contact_menu_share">Share</string>
    <string name="contact_menu_unblock">Unblock</string>
    <string name="contact_name">Name</string>
    <string name="contact_name_exists">A contact with that name exists already.</string>
    <string name="contact_name_invalid">Contact name is invalid.</string>
    <string name="contact_public_key">Public Key</string>
    <string name="contact_public_key_already_exists">Contact public key already exists.</string>
    <string name="contact_public_key_invalid">Contact public key is invalid.</string>
    <string name="custom_address">CUSTOM ADDRESS</string>
    <string name="dialog_title_delete_contact">Delete Contact?</string>
    <string name="dialog_title_import_backup">Import Backup?</string>
    <string name="done">Done</string>
    <string name="empty_list_item">Empty</string>
    <string name="enter_contact_name">Change Name</string>
    <string name="enter_contact_public_key">Change Public Key</string>
    <string name="enter_password">Enter password</string>
    <string name="error">Error</string>
    <string name="error_address_exists">Address exists</string>
    <string name="error_address_invalid">Address invalid</string>
    <string name="error_address_multicast_not_supported">Multicast address not supported</string>
    <string name="explain_need_for_overlay_permission">Meshenger needs to display over other apps to bring incoming calls to the foreground. Please ask and grant this permission now.</string>
    <string name="failed_to_export_database">Failed to export database</string>
    <string name="import_dialog">Import new settings and add %1$d contacts and %2$d events?</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="invalid_number">Invalid Value (must be %1$d..%2$d)</string>
    <string name="invalid_qr">Invalid QR code</string>
    <string name="invalid_qr_code_data">Invalid data</string>
    <string name="listen_for_incoming_calls">Listen for incoming calls.</string>
    <string name="menu_about">About</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_license">License</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_shutdown">Shutdown</string>
    <string name="missed_call_from">Missed call from %1$s (%2$d)</string>
    <string name="missing_bluetooth_permission">Missing permission. Bluetooth not available.</string>
    <string name="missing_camera_permission">Missing permission. Camera not available.</string>
    <string name="missing_microphone_permission">Missing permission. Microphone not available.</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="missing_required_permissions">Cannot run without required permission.</string>
    <string name="night_mode_label_off">Off</string>
    <string name="night_mode_label_on">On</string>
    <string name="night_mode_label_system">System (default)</string>
    <string name="no_value">None</string>
    <string name="password_title">Password</string>
    <string name="paste_qr_code_data">Paste Contact JSON Here</string>
    <string name="ping_all_contacts">Ping All Contacts</string>
    <string name="ping_contact">Ping %1$s</string>
    <string name="remove_all_events">Remove all events?</string>
    <string name="setting_read_only">Read Only</string>
    <string name="settings_addresses">Addresses*</string>
    <string name="settings_audio_bitrate_max">Maximum Audio Bitrate</string>
    <string name="settings_audio_bitrate_max_auto">Auto</string>
    <string name="settings_auto_accept_calls">Auto Accept Calls</string>
    <string name="settings_automatic_status_updates">Automatic Contact Updates</string>
    <string name="settings_block_unknown">Block Unknown Callers</string>
    <string name="settings_camera_framerate">Default Framerate</string>
    <string name="settings_camera_framerate_auto">Auto</string>
    <string name="settings_camera_resolution">Default Resolution</string>
    <string name="settings_camera_resolution_auto">Auto</string>
    <string name="settings_connect_retries">Connect Retries</string>
    <string name="settings_connect_timeout">Connect Timeout (ms)</string>
    <string name="settings_database_password">Startup Password</string>
    <string name="settings_disable_audio_processing">Disable Audio Processing</string>
    <string name="settings_disable_call_history">Disable Call History</string>
    <string name="settings_disable_cpu_overuse_detection">Disable CPU Overuse Detection</string>
    <string name="settings_disable_proximity_sensor">Disable Proximity Sensor</string>
    <string name="settings_enable_camera_by_default">Enable Camera By Default</string>
    <string name="settings_enable_microphone_by_default">Enable Microphone By Default</string>
    <string name="settings_guess_eui64_address">Guess IP address (EUI64)</string>
    <string name="settings_hide_menus">Hide Menus</string>
    <string name="settings_menu_password">Menu Password</string>
    <string name="settings_mode_label_advanced">Advanced</string>
    <string name="settings_mode_label_basic">Basic (default)</string>
    <string name="settings_mode_label_expert">Expert</string>
    <string name="settings_name">Name</string>
    <string name="settings_nightmode">Night Mode</string>
    <string name="settings_prompt_outgoing_calls">Prompt Outgoing Calls</string>
    <string name="settings_public_key">Public Key</string>
    <string name="settings_push_to_talk">Push To Talk</string>
    <string name="settings_select_front_camera_by_default">Use Front Camera By Default</string>
    <string name="settings_settings_mode">Settings Mode</string>
    <string name="settings_show_username_as_logo">Show Username As Logo</string>
    <string name="settings_skip_startup_permission_check">Skip Startup Permission Check</string>
    <string name="settings_speakerphone_mode">Speakerphone</string>
    <string name="settings_start_on_bootup">Start On Bootup</string>
    <string name="settings_theme_name">Theme</string>
    <string name="settings_use_neighbor_table">Use Neighbor Table (ARP/ND)</string>
    <string name="settings_video_bitrate_max">Maximum Video Bitrate</string>
    <string name="settings_video_bitrate_max_auto">Auto</string>
    <string name="settings_video_degradation_mode">Video Degradation</string>
    <string name="settings_video_degradation_mode_label_balanced">Balanced (default)</string>
    <string name="settings_video_degradation_mode_label_disabled">Disabled</string>
    <string name="settings_video_degradation_mode_label_maintain_framerate">Maintain Framerate</string>
    <string name="settings_video_degradation_mode_label_maintain_resolution">Maintain Resolution</string>
    <string name="settings_video_hardware_acceleration">Video Hardware Acceleration</string>
    <string name="setup_address">Setup Address</string>
    <string name="title_calls">Calls</string>
    <string name="title_contact_details">Contact Details</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_settings">Settings</string>
</resources>