<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/padding_10"
    android:paddingStart="@dimen/padding_20"
    android:paddingEnd="@dimen/padding_20"
    android:paddingBottom="@dimen/padding_20"
    android:background="@drawable/dialog_rounded_corner">

    <TextView
        android:id="@+id/checkboxDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:paddingBottom="16dp"
        android:textSize="@dimen/name_text_size"
        android:text="@string/dialog_title_import_backup"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/padding_50"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:checked="false"
        android:textColor="@color/light_light_grey"
        android:text="@string/title_contacts"
        app:checkedState="checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkboxDialogTitle"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/calls"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/padding_50"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:checked="false"
        android:textColor="@color/light_light_grey"
        android:text="@string/title_calls"
        app:checkedState="checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacts"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/peers"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/padding_50"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:checked="false"
        android:textColor="@color/light_light_grey"
        android:text="@string/peers"
        app:checkedState="checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calls"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/padding_50"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:checked="false"
        android:textColor="@color/light_light_grey"
        android:text="@string/title_settings"
        app:checkedState="checked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peers"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/CancelButton"
        android:layout_width="125dp"
        android:layout_height="@dimen/padding_50"
        android:layout_marginTop="@dimen/padding_20"
        android:background="@drawable/next_button_background"
        android:fontFamily="@font/lato_bold"
        android:text="@string/button_cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/OkButton"
        android:layout_width="125dp"
        android:layout_height="@dimen/padding_50"
        android:background="@drawable/next_button_background"
        android:fontFamily="@font/lato_bold"
        android:text="@string/button_ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/padding_20"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/CancelButton"
        app:layout_constraintTop_toTopOf="@+id/CancelButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
