<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AskForOverlayPermissionActivity">

    <TextView
        android:id="@+id/QuestionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/explain_need_for_overlay_permission"
        android:textColor="?android:textColorPrimary"
        android:textSize="23sp"
        android:padding="20dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/SkipButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SkipButton"
        android:layout_width="125dp"
        android:layout_height="@dimen/padding_50"
        android:layout_marginStart="@dimen/padding_50"
        android:layout_marginTop="@dimen/padding_20"
        app:layout_constraintTop_toBottomOf="@+id/QuestionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AskButton"
        android:textSize="18sp"
        android:text="@string/button_skip" />

    <Button
        android:id="@+id/AskButton"
        android:layout_width="125dp"
        android:layout_height="@dimen/padding_50"
        android:layout_marginStart="@dimen/padding_50"
        android:layout_marginEnd="@dimen/padding_50"
        android:layout_marginTop="@dimen/padding_20"
        app:layout_constraintTop_toBottomOf="@+id/QuestionTextView"
        app:layout_constraintStart_toEndOf="@+id/SkipButton"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="18sp"
        android:text="@string/button_ask" />

</androidx.constraintlayout.widget.ConstraintLayout>
