<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_20"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/curved_background"
    >

    <TextView
        android:id="@+id/public_key_conflict_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/contact_key_conflict"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/public_key_conflicting_contact_textview"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:gravity="center"
        android:layout_below="@id/public_key_conflict_textview"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_5" />

    <Button
        android:id="@+id/public_key_conflict_abort_button"
        android:layout_width="125dp"
        android:layout_height="@dimen/padding_50"
        android:layout_below="@id/public_key_conflicting_contact_textview"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_20"
        android:background="@drawable/skip_button_background"
        android:fontFamily="@font/lato_bold"
        android:text="@string/button_abort"
        android:textAllCaps="false"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/public_key_conflict_replace_button"
        android:layout_width="125dp"
        android:layout_height="@dimen/padding_50"
        android:layout_below="@id/public_key_conflicting_contact_textview"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/padding_20"
        android:layout_toEndOf="@id/public_key_conflict_abort_button"
        android:background="@drawable/next_button_background"
        android:fontFamily="@font/lato_bold"
        android:text="@string/button_replace"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>
